apply plugin: 'com.android.library'
apply plugin: 'com.jakewharton.butterknife'
apply plugin: 'maven-publish'

version="2020.1.27"

android 
{
  compileSdkVersion 29
  namespace 'com.stupidbeauty.shutdownat2100.helper'

  defaultConfig 
  {
    buildToolsVersion = "30.0.3"
    minSdkVersion 14
    targetSdkVersion 27
    versionCode 802
    versionName version
  }

  buildTypes 
  {
    release 
    {
      minifyEnabled false
      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
    }
  }

  compileOptions 
  {
    sourceCompatibility JavaVersion.VERSION_1_8
    targetCompatibility JavaVersion.VERSION_1_8
  }
  
  publishing
  {
    singleVariant('release')
    {
      withSourcesJar()
    }
  }

}

dependencies
{
  implementation 'com.upokecenter:cbor:4.4.4'
  implementation 'com.google.protobuf:protobuf-java:3.4.0'
  implementation 'com.jakewharton:butterknife:10.2.3'
  annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
  implementation 'com.github.hxcan:CodePosition:2023.3.29'
  implementation 'org.apache.commons:commons-io:1.3.2'
  implementation group: 'com.koushikdutta.async', name: 'androidasync', version: '2.1.7'
//   implementation 'com.android.support:appcompat-v7:28.0.0'
}

// # https://stackoverflow.com/questions/65380359/lomboks-access-to-jdk-compilers-internal-packages-incompatible-with-java-16

// # enable internal JDK API access at runtime
tasks.withType(JavaCompile).configureEach {
    options.fork = true
    options.forkOptions.jvmArgs += [
//         # essential for butterknife
        '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',

//         # if you need Glide or LomBok
//         # these may not be the exact list, but it works for me
        '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED',
    ]
}

afterEvaluate 
{
  publishing 
  {
    publications
    {
      release(MavenPublication)
      {
        from components.release
        groupId = 'com.github.hxcan'
        artifactId = 'ShutDownAt2100Helper'
        version = '2024.10.29'
      }
    }
  }
}

